--- a/IS-114/Progoblig 3, canvas/index.html
+++ b/IS-114/Progoblig 3, canvas/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html>
   <head>
 
@@ -9,9 +8,9 @@
   </head>
   <body>
 
-    <canvas id="canvas" height="500" width="500"></canvas>
+    <canvas id="house-Canvas" height="500" width="500"></canvas>
 
 
-  <script src="<nina_medlem_1>.js"></script>
+  <script src="nina-canvas.js"></script>
 </body>
 </html>
