--- a/IS-114/Progiblig 3, SVG/index.html
+++ b/IS-114/Progiblig 3, SVG/index.html
@@ -10,7 +10,7 @@
 <svg id="houseSVG" width="400" height="400" xmlns="http://www.w3.org/2000/svg">
 </svg>
 
-<script src="script.js"></script>
+<script src="figure-SVG.js"></script>
 </body>
 </html>
 
