--- a/IS-114/Progoblig 3, canvas/index.html
+++ b/IS-114/Progoblig 3, canvas/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="UTF-8" />
-    <title>progoblig 3</title>
+    <title>Canvas House</title>
 	
   </head>
   <body>
@@ -11,6 +11,6 @@
     <canvas id="house-Canvas" height="500" width="500"></canvas>
 
 
-  <script src="nina-canvas.js"></script>
+  <script src="figure-canvas.js"></script>
 </body>
 </html>
